; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_tmpfile-util.c_fmkostemp_safe.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_tmpfile-util.c_fmkostemp_safe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fmkostemp_safe(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @mkostemp_safe(i8* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* %4, align 4
  br label %30

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = call i32* @fdopen(i32 %17, i8* %18)
  store i32* %19, i32** %9, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %27, label %22

22:                                               ; preds = %16
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @safe_close(i32 %23)
  %25 = load i32, i32* @errno, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %4, align 4
  br label %30

27:                                               ; preds = %16
  %28 = load i32*, i32** %9, align 8
  %29 = load i32**, i32*** %7, align 8
  store i32* %28, i32** %29, align 8
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %27, %22, %14
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @mkostemp_safe(i8*) #1

declare dso_local i32* @fdopen(i32, i8*) #1

declare dso_local i32 @safe_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
